--- a/QLPhongMachTuWPF/View/ModifyDetailInvoice.xaml
+++ b/QLPhongMachTuWPF/View/ModifyDetailInvoice.xaml
@@ -128,6 +128,7 @@
                     <StackPanel Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top" Width="auto" Height="auto" Margin="0 -100 150 0">
                         <TextBlock Text= "INVOICE CODE:" Foreground="Black" Style="{StaticResource titleTextDateAndInvoice}" HorizontalAlignment="Left" Margin="10" FontSize="14"/>
                         <TextBlock Text="INVOICE DATE:" Style="{StaticResource textDateAndInvoice}" HorizontalAlignment="Left" Margin="10 0 0 0" FontSize="14"/>
+                        <TextBlock Text= "STAFF NAME:" Foreground="Black" Style="{StaticResource titleTextDateAndInvoice}" HorizontalAlignment="Left" Margin="10" FontSize="14"/>
 
                     </StackPanel>
 
@@ -137,7 +138,10 @@
                                     VerticalAlignment="Top" HorizontalAlignment="Left" 
                                     Margin="-10 10" FontSize="14" BorderBrush="Transparent"/>
                         <TextBox Text="{Binding NgayHoanThanh, Mode=TwoWay, StringFormat='dd/MM/yyyy'}" Style="{StaticResource txtTextBox}" HorizontalAlignment="Left" FontWeight="Normal" Margin="-10 0 0 0" FontSize="14" BorderBrush="Transparent"/>
-
+                        <TextBox Text="{Binding TenNV, Mode=TwoWay}" Foreground="Black" 
+              Style="{StaticResource txtTextBox}" FontWeight="Normal"
+              VerticalAlignment="Top" HorizontalAlignment="Left" 
+              Margin="-10 10" FontSize="14" BorderBrush="Transparent"/>
                     </StackPanel>
 
 
